THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.

PL-node-v0.11.0
 - ADD: Ignore pattern directories that start with an underscore.
 - ADD: Support for lists with the listItems variable
 - FIX: Resolved issue where pattern parameter data bled into global data object
 - ADD: Support a fluid viewport

PL-node-v0.10.1
 - ADD: Added more unit tests for recently more-modular code
 - FIX: Lineage was not working for patterns with pattern parameters

PL-node-v0.10.0
 - ADD: Added support for pattern parameters! Resolves #88
 - FIX: Data inheritance is now working as advertised. Resolves #127. This turned out to be a MAJOR thing, as I realized the home-page was not passing down any of its json data to partials.
 - CHG: Refactored a lot of code out of patternlab.js and into separate files. Doing so should make everything dryer, more unit testable, and easier to understand I hope.
 - ADD: Added proper styling for the homepage-emergency alert that is displayed for demo purposes
 - ADD: Added a new comment organism, the sticky comment, to ship an example of pattern parameters
 - CHG: Start some JS linting of the project. I don't quite agree with a lot of it, so am trying to set some smart configurations
 - CHG: Wrapped some build messages in the patternlab.config.debug flag
 - FIX: Allow users to set a base url path. Resolves #125 (testing in the wild requested)
 - THX: Thanks @scottnath for the proposed base url solution and @jkbyln for discussion on the topic too!

PL-node-v0.9.1
 - FIX: Fixed an issue with view all navigation not checking for index out of bounds cases

PL-node-v0.9.0
 - FIX: Added grunt-contrib-copy args to copy all found source/css/*.css
 - ADD: Added upgrade instructions to README
 - FIX: Fix issue with styleguide accordions not closing upon click of a sibling menu.
 - THX: @getsetbro for reporting more issues :)
 - ADD: Added support for pattern search. This is 'in beta' and should have more testing applied to it.