@@ -4,6 +4,9 @@ If you'd like to contribute to patternlab - node, please do so! There is always 
 No pull request is too small.
 
 ##Guidelines
-1. Please keep your pull requests concise
-2. _ALWAYS_ submit it against the [dev branch](https://github.com/pattern-lab/patternlab-node/tree/dev). If this does not occur, I will first, try to redirect you gently, second, port over your contribution manually if time allows, and/or third, close your pull request.
+1. Please keep your pull requests concise and limited to **ONE** substantive change at a time.
+2. _ALWAYS_ submit pull requests against the [dev branch](https://github.com/pattern-lab/patternlab-node/tree/dev). If this does not occur, I will first, try to redirect you gently, second, port over your contribution manually if time allows, and/or third, close your pull request.
 3. If you can, add some unit tests using the existing patterns
+
+##Coding style
+Regarding code style like indentation and whitespace, follow the conventions you see used in the source already. Add enough source code comments to help the next person.
