@@ -5,7 +5,7 @@
  	},
  	"ignored-extensions" : ["scss", "DS_Store", "less"],
  	"ignored-directories" : ["scss"],
- 	"debug": true,
+ 	"debug": false,
  	"ishControlsVisible": {
  		"s": true,
  		"m": true,
