@@ -14,7 +14,6 @@
     "gulp-header": "^1.0.5",
     "gulp-load": "^0.1.1",
     "gulp-nodeunit": "0.0.5",
-    "gulp-sass": "^0.7.3",
     "gulp-strip-banner": "0.0.2",
     "html-entities": "^1.1.1",
     "mustache": "^1.0.0"
